<resources>
    <string name="app_name">RootTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="key_binding_default_toolbar_name">Default toolbar</string>

    <string name="error_no_internet_connection">Connection Error</string>
    <!--Back Press-->
    <string name="main_back_press">Back Press</string>
    <!--Behavior-->
    <string name="ScrollingAppBarLayoutBehavior">com.fb.roottest.base.paralax.ScrollingAppBarLayoutBehavior</string>
    <string name="BackDropBottomSheetBehavior">com.fb.roottest.base.paralax.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.fb.roottest.base.paralax.BottomSheetBehaviorGoogleMapsLike
    </string>
    <string name="MergedAppBarLayoutBehavior">com.fb.roottest.base.paralax.MergedAppBarBehavior</string>
    <string name="ScrollAwareFABBehavior">com.fb.roottest.base.paralax.ScrollAwareFABBehavior</string>
    <!--Home Screen-->

    <string name="home_bottom_sheet_title">Add Purchase</string>
    <string name="home_bottom_sheet_content">Some content...</string>
    <string name="hint_purchase">Purchase</string>
    <string name="hint_cost_purchase">Purchase cost</string>
    <string name="hint_count_purchase">Count</string>
    <string name="hint_brand_purchase">Brand</string>
    <string name="hint_password_encrypted">Encrypted password</string>

    // Scaner section
    <string name="home_scan_title">Scan card</string>
    <string name="home_scan_full_added_section_title">Add Purchase</string>
    <string name="photo">Photo</string>

    <!--Purchase Input State hints-->
    <string name="purchase_error_input_state">Wrong purchase name</string>
    <string name="purchase_cost_error_input_state">Wrong purchase cost</string>
    <string name="purchase_count_error_input_state">Wrong purchase count</string>
    <string name="purchase_brand_error_input_state">Wrong purchase brand</string>
    <string name="purchase_add_button">Add purchase</string>
    <string name="home_bottom_generate_data">Generate data</string>
    <string name="encrypt_bd">Encrypt BD</string>
    <string name="encrypt_photo">Encrypt photo</string>
    <string name="get_encrypt_photo">Photo from file</string>
    <string name="get_photo">Photo from Shared</string>
    <!--Item Purchase-->
    <string name="item_title_purchase_name">Name</string>
    <string name="item_title_purchase_cost">Cost</string>
    <string name="item_title_purchase_brand">Brand</string>


</resources>
